# tauri-plugin-printer

./: Cargo.toml  README.md  build.rs  package.json
examples/: printer-settings-example.js
examples/tauri-app/: README.md  package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.vue
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: print_html.toml
permissions/schemas/: schema.json
src/: commands.rs  declare.rs  desktop.rs  lib.rs  windows.rs
