[package]
name = "tauri-plugin-printer"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-printer"

[dependencies]
tauri = { version = "2.7.0" }
serde = "1.0"
thiserror = "2"
base64 = "0.22"
tempfile = "3.8"

[build-dependencies]
tauri-plugin = { version = "2.3.1", features = ["build"] }
